Support runOrigamiServer & Prepare for configuration-cache compat
The project is not yet configuration-cache compatible because origami's setup tasks aren't.